# audita

./: Cargo.toml  Dockerfile  README.md
api/blockchain/: folder.bru  hash.bru
api/document/: folder.bru  store.bru
api/signer/: folder.bru
api/storage/: hash.bru  search.bru
config/: dev.toml
deploy/audita/: config.toml
deploy/grafana/dashboards/: audita-monitoring.json
deploy/prometheus/: prometheus.yml
src/: channel.rs  config.rs  context.rs  main.rs  setup.rs  state.rs
src/application/: document_hasher_service.rs  document_service.rs  fingerprint_service.rs  hasher.rs  mod.rs  services.rs  signer.rs  storage.rs
src/domain/: batch.rs  digest.rs  document.rs  fingerprint.rs  mod.rs  pipeline.rs  protocols.rs  repository.rs  search.rs
src/factories/: helpers.rs  mod.rs  pipeline.rs  repositories.rs
src/handlers/: blockchain.rs  doc.rs  storage.rs
src/infra/: mod.rs  prometheus.rs
src/infra/channel/: channel.rs
src/infra/document/: elasticsearch_repo.rs  mod.rs
src/infra/helper/: hasher.rs  mod.rs  uuid_generator.rs
src/infra/signer/: ethereum.rs  memory.rs  mod.rs
src/infra/storage/: elasticsearch.rs  memory.rs  mod.rs
src/infrastructure/document/: mod.rs  (+2 more)
src/presentation/: error.rs  mod.rs  server.rs
src/routes/: storage.rs
src/server/: error.rs
src/task/: mod.rs  processor.rs  server.rs  signer.rs  storage.rs
src/tasks/: mod.rs  signer.rs  storage.rs  worker.rs
tests/: k6.js  logs.js
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
ui/src/: App.tsx  index.css  main.tsx  package.json
(+65 files in other folders)
