[package]
name = "audita"
version = "0.1.10"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
alloy = { version = "0.12.2", features = ["full"] }
elasticsearch = "8.16.0-alpha.1"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
prometheus = "0.14.0"
tower-http = { version = "0.6.2", features = ["cors", "normalize-path"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
uuid = { version = "1.17.0", features = ["v4"] }
moka = { version = "0.12.10", features = ["future"] }
config = "0.15.11"
hex = "0.4.3"
once_cell = "1.21.3"
